// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with all props 1`] = `
<DocumentFragment>
  <svg
    class="rl-circle"
    height="200"
    role="img"
    viewBox="0 0 100 100"
    width="200"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      Water planet
    </title>
    <desc>
      A blue circle
    </desc>
    <circle
      cx="50"
      cy="50"
      r="50"
    />
  </svg>
</DocumentFragment>
`;

exports[`without title & desc 1`] = `
<DocumentFragment>
  <svg
    class="rl-circle"
    height="200"
    role="img"
    viewBox="0 0 100 100"
    width="200"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="50"
      cy="50"
      r="50"
    />
  </svg>
</DocumentFragment>
`;
